--- a/index.html
+++ b/index.html
@@ -6,18 +6,54 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="image/instagram.png" width="150px">
+    <input type="search" value="검색">
+    <div>
+    <img src="image/profile.jpg" width="150px">
     <!-- <br>태그는 줄바꿈 기능이 있다. -->
-    <p>half_bottle</p>
-    <p>프로필 편집</p>
-    <p>
-    반병현(Bynghyun Ban)<br>
-    작가<br>
-    needleworm.github.io<br>
-        게시물<br>
-        팔로워<br>
-        팔로우<br>
-        133<br>
-        408<br>
-        189<br>
+        <div>
+            <h2>half_bottle</h2>
+            <button>프로필 편집</button>
+        </div>
+    </div>
+    <div>
+        <p>
+            <!-- <strong> 볼드체 표현-->
+            <strong>
+                반병현(Bynghyun Ban)<br>
+            </strong>
+            작가<br>
+        </p>
+        <p>
+            <a href = "http://needleworm.github.io">needleworm.github.io</a>
+        </p>
+    </div>
+    <div>하이라이트가 들어갈 자리</div>
+    <div>
+        <div>
+            게시물<br>
+            133<br>
+        </div>
+        <div>
+            팔로워<br>
+            408<br>
+        </div>
+        <div>
+            팔로우<br>
+            189<br>
+        </div>
+    </div>
+    <div>아이콘이 들어갈 자리</div>
+    <div>
+        <img src="image/th1.jpg" width="32%">
+        <img src="image/th2.jpg" width="32%">
+        <img src="image/th3.jpg" width="32%">
+        <img src="image/th4.jpg" width="32%">
+        <img src="image/th5.jpg" width="32%">
+        <img src="image/th6.jpg" width="32%">
+        <img src="image/th7.jpg" width="32%">
+        <img src="image/th8.jpg" width="32%">
+        <img src="image/th9.jpg" width="32%">
+    </div>
 </body>
 </html>
