--- a/css/class.html
+++ b/css/class.html
@@ -7,6 +7,12 @@
     <!-- 임베디드 방식 -->
     <style>
         h1{color:blue;}
+        .headings{color:tan;} /*그룹으로 묶어서 스타일을 줄 때 유용하다.*/
+        h3.headings{color:aqua;}
+        .headings.headings2{color:black;}
+        span{color:violet;}
+
+        div.box h1{color:green;}
     </style>
     
     <!-- 링크방식 -->
@@ -20,10 +26,18 @@
 <body>
     <!-- 인라인 방식 -->
     <p style="color:red">인라인 스타일 방식</p>
+
     <h1>클래스 선택자를 이용한 선택</h1>
-    <h2>이 부분에 스타일을 적용합니다.</h2>
+    <h2 class="headings">이 부분에 <span>스타일</span>을 적용합니다.</h2>
     <p>클래스 선택자를 이용하여 스타일을 적용할 HTML요소들을 한 번에 선택할 수 있습니다.</p>
-    <h3>이 부분에도 같은 스타일을 적용합니다.</h3>
-    <h3>이 부분에는 다른 스타일과 추가 스타일을 적용합니다.</h3>
+    <h3 class="headings">이 부분에도 같은 스타일을 적용합니다.</h3>
+    <h3 class="headings headings2">이 부분에는 다른 스타일과 추가 스타일을 적용합니다.</h3>
+
+    <div class="box">
+        <h1>스타일 테스트</h1>
+        <div class="box">
+            <h1>div 안에 스타일 테스트</h1>
+        </div>
+    </div>
 </body>
 </html>
