--- a/image.html
+++ b/image.html
@@ -36,5 +36,14 @@
         <img src="image/th8.jpg" width="32%">
         <img src="image/th9.jpg" width="32%">
     </div>
+    <!-- 경로
+절대경로 : 특정문서 페이지 또는 이미지 등 자원에 접근할 수 있는 전체 URL(내 위치 상관x, 풀 주소)
+- photo.png 파일이 /web/public/img/photo.png에 있다면
+<a href="/web/public/img/photo.png">
+
+상대경로:photo.png파일이 /web/public/img/photo.png에 있다면(내 위치부터)
+근데 내가 현재 작업하고 있는 파일의 위치가 /web/public 라면
+<a href="/img/photo.png">
+-->
 </body>
 </html>
