--- a/input.html
+++ b/input.html
@@ -93,6 +93,9 @@
     <p>
     <input type="datetime-local">
     </p>
+    <p>
+    <textarea rows="10" cols="30"></textarea>
+    </p>
 
 </body>
 </html>
