--- a/semantic.html
+++ b/semantic.html
@@ -48,7 +48,7 @@
      2. SEO(검색 엔진 최적화)개선
         - 검색 엔진이 콘텐츠 구조를 더 잘 이해하고 랭킹을 높일 수 있다
      3. 접근성(Accessibility) 향상
-        - 스크린 리더(reader)가 시맨틱 태그를 인식하여 장애인도 웹페이즈를 쉽게 이용 가능 
+        - 스크린 리더(reader)가 시맨틱 태그를 인식하여 장애인도 웹페이지를 쉽게 이용 가능 
      4. 유지보수 편리
         - div 만으로 구성된 코드보다 의미 있는 태그를 사용하면 관리가 쉽다. -->
 </body>
