--- a/css/exam1.html
+++ b/css/exam1.html
@@ -34,7 +34,7 @@
         }
 
         dt{
-            padding: 15px 0;
+            padding: 15px 0px;
             text-align: center; /*가운데 정렬*/
             background: #aaf;
             border-bottom: 10px solid blue;
@@ -58,6 +58,7 @@
     <p class="a2">까마귀 날자 배 떨어진다.</p>
     <p class="a3">발없는 말이 천리 간다.</p>
     </div>
+    <!-- ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ -->
     <dl>
         <dt>한국의 속담</dt>
         <dd class="line">
