--- a/css/image.html
+++ b/css/image.html
@@ -9,7 +9,11 @@
         border: 1px solid black;
         width: 300px;
         height: 300px;
-        background: url(image/backgroundImage.gif);
+        background: url(image/backgroundImage.gif) repeat-x, url(image/acid2Test.jpg) repeat-x, url(image/a.jpg) repeat;
+        /* no-repeat(한번만 출력하기)
+           repeat(반복하기 default값)
+           repeat-x(x좌표로 반복)
+           repeat-y(y좌표로 반복) */
     }
     </style>
 </head>
