--- a/css/attribute.html
+++ b/css/attribute.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         [disabled]{
-            opacity: 0.5; /* 투명도 */
+            opacity: 0.5; /* 투명도 0 ~ 1 */
         }
         [type="text"]{
             border: 1px solid #f00;
