--- a/css/flex-direction.html
+++ b/css/flex-direction.html
@@ -29,19 +29,26 @@
             background: cornflowerblue;
         }
 
+        /* flex-direction
+        요소들을 어떤 방향으로 배치할지 주 축(main axis)을 결정 */
+
+        /* 왼쪽에서 오른쪽으로 배치 */
         .row{
             flex-direction: row;
 
         }
 
+        /* 오른쪽에서 왼쪽으로 배치 */
         .row-reverse{
             flex-direction: row-reverse;
         }
 
+        /* 위에서 아래로 배치 */
         .column{
             flex-direction: column;
         }
 
+        /* 아래에서 위로 배치 */
         .column-reverse{
             flex-direction: column-reverse;
         }
