--- a/css/flex-wrap.html
+++ b/css/flex-wrap.html
@@ -58,6 +58,7 @@
     </style>
 </head>
 <body>
+    <!-- 브라우저의 너비에 따라 요소가 늘어나거나 감소하는 속성 -->
     <h1>noWrap</h1>
     <section class="noWrap">
         <div>01</div>
