--- a/css/justify-content.html
+++ b/css/justify-content.html
@@ -59,6 +59,7 @@
     </style>
 </head>
 <body>
+    <!-- item들을 어떻게 배치할거냐 -->
     <h1>justify-content와 align-items</h1>
     <hr>
     <p>flex-start</p>
