--- a/js/exam1.html
+++ b/js/exam1.html
@@ -68,6 +68,47 @@
         let fah = cel * 1.8 + 32;
         document.write("섭씨의 25도는 화씨로 ",fah,"도","<br>");
         
+        document.write("<hr>");
+
+        let a, b;
+        a = b = 3 + 4 * 5;
+        document.write("a : ",a,"<br>", "b : ",b,"<br>");
+        // a = 23;
+        // b = 23;
+
+        let x;
+        x = 10 / 2 * 3;
+        document.write("x : ",x,"<br>");
+        // x : 15;
+
+        let result
+        result = 5 + 3 > 7 && 2 < 4;
+        document.write("result : ",result,"<br>");
+        //result : true
+        //1. 산술연산자 계산
+        //2. 비교연산자 계산
+        //3. 논리연산자 계산
+
+        let a1,b1,c1,total
+        total = (a1=2) + (b1=3) * (c1=4)
+        document.write("total : ",total,"<br>","a1 : ", a1,"<br>","b1 : ", b1,"<br>","c1 : ", c1,"<br>");
+        // 1. total: 14
+        // 2. a1:2 ,b1:3 ,c1:4
+
+        // 1. 소괄호 연산
+        // 2. 산술연산(*) -> 산술연산(+)
+        // 3. 대입연산
+
+        let a2,x2;
+        x2 = (a2=5) > 3 ? a2 * 2 : a2 / 2;
+        document.write("a2 : ",a2,"<br>","x2 : ", x2,"<br>");
+        //a2 : 5
+        //x2 : 10
+
+        // 1. 소괄호 계산
+        // 2. 비교연산
+        // 3. 삼항연산
+
     </script>
 </head>
 <body>
