--- a/css/menu3.html
+++ b/css/menu3.html
@@ -5,22 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{
-            margin: 0;
-        }
-
-        ul{
+        .menu{
             display: flex;
             list-style: none;
+            margin: 0;
+            padding: 0;
         }
 
-        li{
-            border: 1px solid black;
-            padding: 8px;
-        }
-
-        a{
-            text-decoration: none;
+        .menu li{
+            border-top: 1px solid gray;
+            border-bottom: 1px solid gray;
+            border-right: 1px solid gray;
         }
         
     </style>
@@ -28,18 +23,19 @@
 <body>
     <div>
         <ul class="menu">
-            <li><a href="#">HTML</a></li>
+            <li><a href="#">HTML</a>
+                <ul class="sub">
+                    <li><a href="#">메뉴1</a></li>
+                    <li><a href="#">메뉴2</a></li>
+                    <li><a href="#">메뉴3</a></li>
+                </ul>
+            </li>
             <li><a href="#">CSS</a></li>
             <li><a href="#">JavaScript</a></li>
             <li><a href="#">JQuery</a></li>
             <li><a href="#">Jsp</a></li>
         </ul>
 
-        <ul class="sub">
-            <li><a href="#">메뉴1</a></li>
-            <li><a href="#">메뉴2</a></li>
-            <li><a href="#">메뉴3</a></li>
-        </ul>
     </div>
 </body>
 </html>
