--- a/css/menu3.html
+++ b/css/menu3.html
@@ -12,10 +12,62 @@
             padding: 0;
         }
 
-        .menu li{
+        .menu > li{
+            /* position: relative; */
             border-top: 1px solid gray;
             border-bottom: 1px solid gray;
             border-right: 1px solid gray;
+        }
+
+        .menu > li:first-child{
+            border-left: 1px solid gray;
+        }
+
+        .menu > li > a{
+            display: block;
+            padding: 2px 10px;
+            text-decoration : none;
+        }
+
+        .menu > li > a:hover{
+            background : gray;
+            color: white;
+        }
+
+        .sub{
+            position: absolute;
+            display: none;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            background: white;
+            /* flex-direction: row; */
+            /* white-space: nowrap; */
+        }
+
+        .menu > li:hover > .sub{
+            display: flex;
+        }
+
+        .sub li{
+            border-top: 1px solid gray;
+            border-bottom: 1px solid gray;
+            border-right: 1px solid gray;
+        }
+
+        .sub li:first-child{
+            border-left: 1px solid gray;
+        }
+
+        .sub a{
+            display: block;
+            padding: 2px 10px;
+            text-decoration: none;
+        }
+
+        .sub a:hover{
+            background: gray;
+            color: white;
         }
         
     </style>
