--- a/js/exam2.html
+++ b/js/exam2.html
@@ -51,7 +51,20 @@
             case 0:
                 console.log(`${num}은 짝수입니다.`);
                 break;
+            default:
+                console.log("잘못된 숫자입니다.");
+                break;
         }
+
+        // 안됨
+        // switch(num){
+        //     case 1,3,5,7,9:
+        //         console.log(`${num}은 홀수입니다.`);        
+        //         break;
+        //     case 2,4,6,8,10:
+        //         console.log(`${num}은 짝수입니다.`);
+        //         break;
+        // }
     </script>
 </head>
 <body>
