--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- relationship: 연결하려는 파일과의 관계 -->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet"/>
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- <br>태그는 줄바꿈 기능이 있다. -->
@@ -26,7 +27,10 @@
             <img src="image/profile.jpg" class="circle_pic">
         </div>
         <div id="profile_info">
-            <div id="id">half_bottle<i class="fa-solid fa-gear"></i></div>
+            <div id="id">
+                <span>half_bottle</span>
+                <i class="fa-solid fa-gear"></i>
+            </div>
             <button>프로필 편집</button>
         </div>
     </div>
@@ -34,12 +38,12 @@
     <div>
         <p>
             <!-- <strong> 볼드체 표현-->
-            <strong>
+            <strong id="userInfo">
                 반병현(Bynghyun Ban)<br>
             </strong>
-            작가<br>
+            <span id="summary">작가</span><br>
         </p>
-        <p>
+        <p id="profileDetail">
             <a href = "http://needleworm.github.io">needleworm.github.io</a>
         </p>
     </div>
