--- a/js/ex13_function.html
+++ b/js/ex13_function.html
@@ -158,6 +158,14 @@
         //charAt()
         //지정한 인덱스의 문자를 반환
         console.log(str.charAt(0));
+
+        let test = "테 스 트 중 입 니 다"
+        let testArr = test.split(' ');
+        let teststr = ' ';
+        for(str of testArr){
+            teststr += str;
+        }
+        console.log(teststr)
     </script>
 </head>
 <body>
